fix: make notifications requests user-agnostic
